Show memory leak.

--- a/test/mleak/CMakeLists.txt
+++ b/test/mleak/CMakeLists.txt
@@ -12,6 +12,12 @@
 # ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 # OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 
-ADD_SUBDIRECTORY(parsing)
-ADD_SUBDIRECTORY(mleak)
-ADD_SUBDIRECTORY(api)
+SET (SRCS mleak.c)
+
+# use the library we build, duh.
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/../../${YAJL_DIST_NAME}/include)
+LINK_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/../../${YAJL_DIST_NAME}/lib)
+
+ADD_EXECUTABLE(yajl_mleak ${SRCS})
+
+TARGET_LINK_LIBRARIES(yajl_mleak yajl_s)
